<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/splash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:text="@string/txt_we_are_pkk"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:text="@string/forget_password_page"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Lupa_emailt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lupa_kirim_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                style="@style/Widget.MaterialComponents.Button"
                app:rippleColor="@color/efect_btn"
                app:strokeColor="@color/efect_btn"
                android:text="@string/send"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lupa_kembali_btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rippleColor="@color/efect_btn"
                app:strokeColor="@color/efect_btn"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"
                android:text="@string/back"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>