<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/splash"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                style="@style/TextAppearance.MaterialComponents.Headline1"
                android:text="@string/txt_we_are_pkk"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="70dp"
                style="@style/TextAppearance.MaterialComponents.Headline1"
                android:text="SIGN IN"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/txt_password"
                android:paddingBottom="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/lupa_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="0dp"
                app:strokeColor="@color/colorPrimary"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    style="@style/Widget.MaterialComponents.Button"
                    app:rippleColor="@color/efect_btn"
                    app:strokeColor="@color/efect_btn"
                    android:text="@string/btn_login"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rippleColor="@color/efect_btn"
                    app:strokeColor="@color/efect_btn"
                    android:textAllCaps="false"
                    android:layout_alignParentLeft="true"
                    android:text="@string/sign_up"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>
        </LinearLayout>
</ScrollView>